# rustythings

./: .gitignore  Cargo.toml  tsconfig.json
auth/: Cargo.toml
auth/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs
client/: App.ts  api.ts
src/: db.rs  errors.rs  main.rs  model.rs
static/: index.html  index.js
todo/: README.md
todo/client/: App.ts  index.ts  types.ts
todo/src/: config.rs  main.rs
todo/static/: index.html
