[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
postgres = { version = "0.19.3", features = ["with-uuid-1"] }
uuid = { version = "1.0", features = ["v4", "serde"] }